# ecommerce-product-listing

./: .env  .gitignore  Installation Guide.md  README.md  go.mod  go.sum  insert.sh  loadtest.sh  main.go  main.py  postgress.sh  pyproject.toml  run.sh
cmd/insert/: main.go
cmd/loadtest/: main.go
config/: db.go  env.go  init.go
docker/postgres/: .env  README.md  docker-compose.postgres-replica.yml  docker-compose.postgres.replica.yml  postgres-compose.sh  postgres-primary-replica.sh  postgres-replica.sh  postgress.sh
docker/postgres/primary/: init-replication.sh  pg_hba.conf
docker/postgres/primary/init/: 01-create-replication-user.sql
docker/postgres/replica/: entrypoint.sh  start-replica.sh
handler/: product_handler.go
loadtest/: query_values.json
models/: product.go
python_scripts/: eda.py  fetch_products.py  generate.py  insert.py  plot.py
repository/: product_repository.go
results/: load_test_run.json  response_times_100k.json  response_times_10k.json  response_times_1M.json
scripts/: fetch_products.py  insert.py
service/: product_service.go
