[project]
name = "ecommerce-product-listing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.2",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.2",
]
